--- a/app/src/main/res/layout/phone_info.xml
+++ b/app/src/main/res/layout/phone_info.xml
@@ -3,11 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/manufacturer_tv"
+        android:id="@+id/manufacturerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:id="@+id/model_tv"
+        android:id="@+id/modelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
